# Mac_Find

./: .gitignore
.github/workflows/: build-a-cpp.yml  build-a-go.yml  build-a-python.yml  build-a-rust.yml  build-a-swift.yml  build-a-tauri.yml  build-a-ts.yml  build-b-cpp.yml  build-b-go.yml  build-b-python.yml  build-b-rust.yml  build-b-swift.yml  build-b-tauri.yml  build-b-ts.yml  build-c-cpp.yml  build-c-go.yml  build-c-python.yml  build-c-rust.yml  build-c-swift.yml  build-c-tauri.yml  build-c-ts.yml
Road_A/Src_CPP/: CMakeLists.txt  README.md  SearchEngine.h  main_cli.cpp  main_gui.cpp
Road_A/Src_GO/: README.md  go.mod  gui.go  main.go
Road_A/Src_GO/internal/engine/: match.go  searchfs_other.go
Road_A/Src_PYTHON/: MacFindA.spec  main.py
Road_A/Src_PYTHON/mac_find_a/: app.py
Road_A/Src_PYTHON/tests/: test_engine.py
Road_A/Src_RUST/src/: lib.rs  main.rs
Road_A/Src_SWIFT/: .gitignore  Package.swift  README.md
Road_A/Src_SWIFT/Sources/CSearchFS/: csearchfs.c
Road_A/Src_SWIFT/Sources/MacHaiFindA/: GUIApp.swift
Road_A/Src_TAURI/: .gitignore  index.html  package-lock.json  vite.config.ts
Road_A/Src_TAURI/src/: styles.css
Road_A/Src_TAURI/src-tauri/: Cargo.toml  tauri.conf.json
Road_A/Src_TAURI/src-tauri/capabilities/: default.json
Road_A/Src_TAURI/src-tauri/src/: lib.rs
Road_A/Src_TS/: .gitignore  binding.gyp  package-lock.json  tsconfig.json  tsconfig.renderer.json
Road_A/Src_TS/native/: searchfs.cc
Road_A/Src_TS/renderer/: index.html  renderer.ts  styles.css
Road_A/Src_TS/src/: cli.ts  main.ts  preload.ts
Road_B/Src_CPP/: CMakeLists.txt
Road_B/Src_CPP/src/: fzf.hpp  index_engine.cpp  index_engine.hpp  index_format.hpp  main_cli.cpp  main_gui.cpp  scanner.cpp
Road_B/Src_GO/: go.mod
Road_B/Src_GO/cmd/macfind/: gui.go
Road_B/Src_GO/internal/index/: index.go  mmap_other.go  walk.go
Road_B/Src_GO/internal/search/: search_test.go
Road_B/Src_PYTHON/: app.py  requirements.txt
Road_B/Src_PYTHON/mac_find_b/: __init__.py  cli.py  engine.py  gui.py
Road_B/Src_RUST/: Cargo.toml
Road_B/Src_RUST/src/: bitmask.rs  index.rs  search.rs
Road_B/Src_SWIFT/: .gitignore  README.md
Road_B/Src_SWIFT/Sources/MacHaiFindB/: GUIApp.swift
Road_B/Src_SWIFT/Sources/SearchEngine/: ExtensionTable.swift  MappedIndex.swift  SearchEngine.swift
Road_B/Src_SWIFT/Tests/SearchEngineTests/: SearchEngineTests.swift
Road_B/Src_TAURI/: index.html  vite.config.ts
Road_B/Src_TAURI/src/: main.ts
Road_B/Src_TAURI/src-tauri/: tauri.conf.json
Road_B/Src_TAURI/src-tauri/capabilities/: default.json
Road_B/Src_TS/: README.md  package-lock.json  package.json  tsconfig.json
Road_B/Src_TS/scripts/: copy-assets.js
Road_B/Src_TS/src/cli/: cli.ts
Road_B/Src_TS/src/engine/: extIds.ts  indexFormat.ts  indexer.ts  store.ts
Road_B/Src_TS/src/main/: main.ts
Road_B/Src_TS/src/preload/: preload.ts
Road_B/Src_TS/src/renderer/: index.html  renderer.ts
Road_C/Src_CPP/: CMakeLists.txt  HybridEngine.cpp  HybridEngine.h  IndexEngine.cpp  IndexEngine.h  README.md  SearchFsEngine.cpp  SearchFsEngine.h  SearchTypes.h  VolumeFilter.cpp  VolumeFilter.h  main_cli.cpp  main_gui.cpp
Road_C/Src_GO/: README.md  go.mod
Road_C/Src_GO/cmd/macfind/: FyneApp.toml  cli.go  gui.go  main.go
Road_C/Src_GO/internal/bitmask/: bitmask.go  bitmask_test.go
Road_C/Src_GO/internal/engine/: engine.go  engine_test.go
Road_C/Src_GO/internal/fuzzy/: fuzzy.go  fuzzy_test.go
Road_C/Src_GO/internal/index/: build.go  format.go  index_test.go  mounts_darwin.go  mounts_other.go  ranking_test.go  search.go  walkfilter.go  walkfilter_test.go
Road_C/Src_GO/internal/searchfs/: searchfs_darwin.go  searchfs_other.go
Road_C/Src_GO/internal/theme/: theme.go
Road_C/Src_PYTHON/: MacFindRoadC.spec  README.md  pyproject.toml  requirements.txt
Road_C/Src_PYTHON/macfind_c/: __init__.py  app.py  bitmask.py  cli.py  engine.py  fuzzy.py  gui.py  index.py  searchfs.py  volumes.py
Road_C/Src_PYTHON/tests/: test_engine.py
Road_C/Src_RUST/: Cargo.toml  README.md
Road_C/Src_RUST/src/: bitmask.rs  cli.rs  engine.rs  fuzzy.rs  index.rs  lib.rs  main.rs  mounts.rs  reveal.rs  searchfs.rs
Road_C/Src_SWIFT/: Package.swift  README.md
Road_C/Src_SWIFT/Sources/CSearchFS/: csearchfs.c
Road_C/Src_SWIFT/Sources/HybridEngine/: BinaryIndex.swift  Bitmask.swift  ExtensionTable.swift  FuzzyScore.swift  (+5 more)
Road_C/Src_TAURI/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Road_C/Src_TAURI/src/: api.ts  main.ts  styles.css  types.ts
Road_C/Src_TAURI/src-tauri/: Cargo.toml  tauri.conf.json
Road_C/Src_TAURI/src-tauri/capabilities/: default.json
Road_C/Src_TAURI/src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs
Road_C/Src_TAURI/src-tauri/src/engine/: fzf.rs  index.rs  mod.rs  mounts.rs  searchfs.rs  types.rs
Road_C/Src_TS/: .gitignore  README.md  binding.gyp  package.json  tsconfig.json
Road_C/Src_TS/native/: searchfs_addon.mm
Road_C/Src_TS/scripts/: copy-assets.js
backup/Road_A/Src_CPP/: SearchEngine.cpp
backup/Road_A/Src_GO/: gui.go
backup/Road_A/Src_PYTHON/: .gitignore  README.md  pyproject.toml  requirements.txt
backup/Road_A/Src_PYTHON/mac_find_a/: __init__.py  app.py  cli.py  searchfs_engine.py
backup/Road_A/Src_RUST/: Cargo.toml  README.md
backup/Road_A/Src_RUST/src/: cli.rs  engine.rs  main.rs  searchfs_sys.rs
backup/Road_A/Src_TAURI/: README.md  package.json  tsconfig.json
backup/Road_A/Src_TS/: README.md  package.json
backup/Road_B/Src_CPP/: README.md
backup/Road_B/Src_GO/: README.md
backup/Road_B/Src_PYTHON/: .gitignore  README.md  pyproject.toml
backup/Road_B/Src_PYTHON/mac_find_b/: gui.py
backup/Road_B/Src_RUST/: README.md
backup/Road_B/Src_SWIFT/: Package.swift
backup/Road_B/Src_TAURI/: .gitignore  README.md  package-lock.json  package.json
backup/Road_B/Src_TAURI/src-tauri/: Cargo.toml  tauri.conf.json
backup/Road_B/Src_TAURI/src-tauri/src/: lib.rs  main.rs
backup/Road_B/Src_TAURI/src-tauri/src/engine/: index.rs  search.rs
backup/workflows/: build-a-go.yml  build-a-python.yml  build-b-rust.yml
(+69 files in other folders)
