[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macfind-c-python"
version = "0.1.0"
description = "MacFind Road_C (Python) — hybrid macOS file search: binary index primary + searchfs() fallback, PyQt6 GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Mac_Find 18 implementation matrix — c-python" }]

dependencies = [
    # macOS 12 (Intel) floor: PyQt6-Qt6 >= 6.8 requires macOS 13+ at runtime,
    # so the app would not open on the user's 12.7.6. Qt 6.6.x is the last line
    # that ships a real x86_64 wheel (macosx_10_14) AND still runs on macOS 12.
    "PyQt6==6.6.1",
    "PyQt6-Qt6==6.6.*",
    "PyQt6-sip>=13.6,<14",
    "numpy>=1.24,<2.1",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
# Headless CLI (used by CI smoke tests and scripting).
macfind-c = "macfind_c.cli:main"

[project.gui-scripts]
# GUI launcher.
macfind-c-gui = "macfind_c.gui:main"

[tool.setuptools]
packages = ["macfind_c"]
