[package]
name = "macfind-roadc-tauri"
version = "0.1.0"
description = "macOS hybrid file search (index + searchfs fallback) — Road_C Tauri"
authors = ["Mac_Find 21 matrix · c-tauri"]
edition = "2021"
rust-version = "1.77"

# The Tauri app's Rust code lives in a library so both the GUI binary and the
# CLI smoke-test binary can share the engine.
[lib]
name = "macfind_roadc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "macfind-roadc-tauri"
path = "src/main.rs"

# Headless CLI used for CI smoke tests (no display, no Full Disk Access needed).
[[bin]]
name = "mac-find-c-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"

[features]
# This feature is used to prevent the DevTools from being included in release.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
